--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: 'admin'
       POSTGRES_PASSWORD: 'admin123'
-      POSTGRES_DB: 'daily-diet'
+      POSTGRES_DB: 'payments'
     ports:
       - "5432:5432"
     expose:
