--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.0
 qrcode==7.4.2
 pillow==10.2.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
 python-dotenv==1.0.1
